# PathTracer_CPP

./: CMakeLists.txt  PathTracer_CPP_2024-08-17-120903.collapsed  README.md  Scenes.txt  imgui.ini
Vulkan/: camera.cpp  vk_engine.cpp  vk_engine.h  vk_main.cpp
assets/meshes/: companionCubeLow.mtl  lucyScaled.mtl  portalGun.mtl
include/: AABCubeBounds.h  AABCubeCenter.h  BVHNode.h  BoundingBox.h  Camera.h  Config.h  Ray.h  Render.h  RenderSingleThreadedBVH.h  SceneObject.h  Sphere.h  Vector3.h
libraries/glfw-3.4/CMake/modules/: FindEpollShim.cmake
libraries/glfw-3.4/docs/: build.md
libraries/glfw-3.4/docs/html/search/: all_1c.js  files_7.js
libraries/glfw-3.4/include/GLFW/: glfw3.h  glfw3native.h
libraries/glfw-3.4/src/: internal.h  vulkan.c
meshes/: companionCube.mtl  companionCubeV2.mtl  intersect_cube.blend  torus.mtl
src/: AABCubeBounds.cpp  AABCubeBounds.h  AABCubeCenter.cpp  AABCubeCenter.h  BVH.cpp  BVH.h  BVHNode.cpp  BVHNode.h  BoundingBox.cpp  BoundingBox.h  CPUPT.cpp  CPUPT.h  Camera.cpp  Camera.h  Config.cpp  Config.h  Denoiser.cpp  Denoiser.h  DirectionSampler.cpp  DirectionSampler.h  InputManager.cpp  InputManager.h  LoadMesh.cpp  LoadMesh.h  Material.h  MaterialManager.cpp  MaterialManager.h  Matrix3x3.h  Matrix4x4.h  Mesh.cpp  Mesh.h  MeshObject.cpp  MeshObject.h  PathTracer.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Render.cpp  Render.h  (+22 more)
